--- a/discovery.properties
+++ b/discovery.properties
@@ -1,6 +1,7 @@
 spring.application.name=discovery
 server.port=8082
 eureka.instance.hostname=localhost
-eureka.client.serviceUrl.defaultZone=http://localhost:8082/eureka/
+
+eureka.client.serviceUrl.defaultZone=http://discoveryUser:${DISCOVERY_SERVICE_PASSWORD}@localhost:8082/eureka/
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
