--- a/discovery.properties
+++ b/discovery.properties
@@ -5,3 +5,6 @@ eureka.instance.hostname=localhost
 eureka.client.serviceUrl.defaultZone=http://discoveryUser:${DISCOVERY_SERVICE_PASSWORD}@localhost:8082/eureka/
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
+
+spring.redis.host=localhost 
+spring.redis.port=6379
