changed security settings

--- a/gateway.properties
+++ b/gateway.properties
@@ -4,27 +4,17 @@ server.port=8080
 eureka.client.region=default
 eureka.client.registryFetchIntervalSeconds=5
 
-zuul.routes.auth-service.path=/auth/**
-zuul.routes.auth-service.sensitive-headers=Set-Cookie,Authorization
-hystrix.command.auth-service.execution.isolation.thread.timeoutInMilliseconds=600000
-
 zuul.routes.event.path = /event/**
 zuul.routes.event.serviceId = event-service
 zuul.routes.event.stripPrefix = false
 hystrix.command.event.execution.isolation.thread.timeoutInMilliseconds=600000
 
-zuul.routes.participant-service.path=/participant/**
-zuul.routes.participant-service.sensitive-headers=Set-Cookie,Authorization
-hystrix.command.participant-service.execution.isolation.thread.timeoutInMilliseconds=600000
-
-zuul.routes.role-play-service.path=/rolePlay/**
-zuul.routes.role-play-service.sensitive-headers=Set-Cookie,Authorization
-hystrix.command.role-play-service.execution.isolation.thread.timeoutInMilliseconds=600000
+zuul.routes.auth-service.path = /auth/**
+zuul.routes.auth-service.serviceId = auth-service
+zuul.routes.auth-service.stripPrefix = false
+hystrix.command.auth-service.execution.isolation.thread.timeoutInMilliseconds=600000
 
 zuul.routes.discovery.path=/discovery/**
 zuul.routes.discovery.sensitive-headers=Set-Cookie,Authorization
 zuul.routes.discovery.url=http://localhost:8082
 hystrix.command.discovery.execution.isolation.thread.timeoutInMilliseconds=600000
-
-spring.redis.host=localhost
-spring.redis.port=6379
