--- a/gateway.properties
+++ b/gateway.properties
@@ -4,6 +4,8 @@ server.port=8080
 eureka.client.region=default
 eureka.client.registryFetchIntervalSeconds=5
 
+management.security.sessions=never
+
 zuul.routes.event.path = /event/**
 zuul.routes.event.serviceId = event-service
 zuul.routes.event.stripPrefix = false
