changed gateway properties

--- a/gateway.properties
+++ b/gateway.properties
@@ -9,14 +9,17 @@ management.security.sessions=never
 zuul.routes.event.path = /event/**
 zuul.routes.event.serviceId = event-service
 zuul.routes.event.stripPrefix = false
+zuul.routes.event.sensitive-headers=Set-Cookie,Authorization
 hystrix.command.event.execution.isolation.thread.timeoutInMilliseconds=600000
 
 zuul.routes.auth-service.path = /auth/**
 zuul.routes.auth-service.serviceId = auth-service
 zuul.routes.auth-service.stripPrefix = false
+zuul.routes.auth-service.sensitive-headers=Set-Cookie,Authorization
 hystrix.command.auth-service.execution.isolation.thread.timeoutInMilliseconds=600000
 
 zuul.routes.discovery.path=/discovery/**
 zuul.routes.discovery.sensitive-headers=Set-Cookie,Authorization
 zuul.routes.discovery.url=http://localhost:8082
+zuul.routes.discovery.stripPrefix = false
 hystrix.command.discovery.execution.isolation.thread.timeoutInMilliseconds=600000
