changed event-service path

--- a/gateway.properties
+++ b/gateway.properties
@@ -6,7 +6,7 @@ eureka.client.registryFetchIntervalSeconds=5
 
 management.security.sessions=never
 
-zuul.routes.event.path = /event/**
+zuul.routes.event.path = /api/event/**
 zuul.routes.event.serviceId = event-service
 zuul.routes.event.stripPrefix = false
 zuul.routes.event.sensitive-headers=Set-Cookie,Authorization
