--- a/auth-service.properties
+++ b/auth-service.properties
@@ -1,5 +1,6 @@
 spring.application.name=auth-service
 server.port=8084
+server.context-path=/auth
 
 eureka.client.region = default
 eureka.client.registryFetchIntervalSeconds = 5
