--- a/gateway.properties
+++ b/gateway.properties
@@ -13,9 +13,9 @@ zuul.routes.event.sensitive-headers=Set-Cookie,Authorization
 hystrix.command.event.execution.isolation.thread.timeoutInMilliseconds=600000
 
 zuul.routes.auth-service.path = /auth/**
-zuul.routes.auth-service.serviceId = auth-service
+zuul.routes.auth-service.url = http://localhost:8084
 zuul.routes.auth-service.stripPrefix = false
-zuul.routes.auth-service.sensitive-headers=Set-Cookie,Authorization
+zuul.routes.auth-service.sensitive-headers=
 hystrix.command.auth-service.execution.isolation.thread.timeoutInMilliseconds=600000
 
 zuul.routes.discovery.path=/discovery/**
